fix button safari

--- a/web/src/components/SearchPlaces.css
+++ b/web/src/components/SearchPlaces.css
@@ -24,4 +24,5 @@ button.quit {
 	border-radius: 100%;
 	padding: 0.35em;
 	aspect-ratio: 1;
+	display: flex;
 }
